Consulta de categorias solo por usuario logueado